--- a/app/src/main/res/layout/activity_aspect.xml
+++ b/app/src/main/res/layout/activity_aspect.xml
@@ -7,7 +7,7 @@
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点击"
+        android:text="点击之后看log"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
