--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <com.wrl.exercise.widget.UIButton
-        android:id="@+id/btn"
+    <Button
+        android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:UIButtonType="primary"
-        app:UIButtonSize="middle"
-        android:text="点击"
-        android:layout_margin="20dp" />
+        android:text="bottomSheet"
+        android:onClick="click"/>
+
+
+    <Button
+        android:id="@+id/aspect_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="aspect_activity"
+        android:onClick="click"/>
+
 
 </LinearLayout>
